--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,28 +1,48 @@
+//////////////////////////////////////////////////////////////////////////
+// CSS RESET -- ERIC MEYER ///////////////////////////////////////////////
+//////////////////////////////////////////////////////////////////////////
+
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p,
+blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em,
+img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u,
+i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table,
+caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details,
+embed, figure, figcaption, footer, header, hgroup, menu, nav, output,
+ruby, section, summary, time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+}
+
+//////////////////////////////////////////////////////////////////////////
+// COLOR VARIABLES ///////////////////////////////////////////////////////
+//////////////////////////////////////////////////////////////////////////
+/* primary color */		$earthybrown:	rgb(145,92,85);
+/* primary color */		$livegreen:		rgb(119,169,78);
+
+/* secondary color */	$statelygray:	rgb(62,71,64);
+/* secondary color */	$cream:				rgb(24,221,187);
+/* secondary color */	$softgreen:		rgb(167,167,131);
+
+//////////////////////////////////////////////////////////////////////////
+// UNIVERSAL STYLING /////////////////////////////////////////////////////
+//////////////////////////////////////////////////////////////////////////
 body {
-    background: #fafafa;
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    color: #333;
+  font-family: Helvetica, Arial, sans-serif;
+	font-size: 1em;
+	line-height: 1.6;
+	color: $statelygray;
+	vertical-align: top;
 }
 
-.hero-unit {
-    margin: 50px auto 0 auto;
-    width: 300px;
-    font-size: 18px;
-    font-weight: 200;
-    line-height: 30px;
-    background-color: #eee;
-    border-radius: 6px;
-    padding: 60px;
-    h1 {
-        font-size: 60px;
-        line-height: 1;
-        letter-spacing: -1px;
-    }
-}
+h1, h2, h3, h4, h5, h6 { color: $livegreen; }
 
-.browsehappy {
-    margin: 0.2em 0;
-    background: #ccc;
-    color: #000;
-    padding: 0.2em 0;
+.main-container {
+	width: 90%;
+	margin: 0 auto;
 }
