--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -33,16 +33,20 @@ ruby, section, summary, time, mark, audio, video {
 // UNIVERSAL STYLING /////////////////////////////////////////////////////
 //////////////////////////////////////////////////////////////////////////
 body {
-  font-family: Helvetica, Arial, sans-serif;
+  font-family: "proxima-nova", Helvetica, Arial, sans-serif;
 	font-size: 1.5em;
 	line-height: 1.6;
 	color: $statelygray;
 	vertical-align: top;
-	background-color: $cream;
+
+	background-image: url(/images/wood-background.png);
 	text-align: center;
 }
 
-h1, h2, h3, h4, h5, h6 { color: $earthybrown; }
+h1, h2, h3, h4, h5, h6 {
+	font-family: "adelle", serif;
+	color: $livegreen;
+}
 
 //////////////////////////////////////////////////////////////////////////
 // MAIN CONTAINER STYLING ////////////////////////////////////////////////
@@ -55,6 +59,7 @@ h1, h2, h3, h4, h5, h6 { color: $earthybrown; }
 .top-logo { margin: 50px; }
 
 .herotext {
+	font-family: "adelle", serif;
 	font-size: 3.25em;
 	line-height: 1.2;
 	color: $livegreen;
